Soliding Station bug fixes